[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/titulo/Just One.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0.462745, 0.290196, 0.290196, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 306.0
margin_top = 38.0
margin_right = 457.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 2 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 306.0
margin_top = 115.0
margin_right = 457.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
